Add Mubarak Ganiyu Infomration

--- a/00-student-profile/Writeup.html
+++ b/00-student-profile/Writeup.html
@@ -171,7 +171,9 @@ pre code {
 </div>
 
 
-
+<p><strong>Getting to know Mubarak Ganiyu</strong> Mubarak Ganiyu is from Lagos, Nigeria.</p>
+<p>He got into data science as he loves tinkering with numbers. Having solved numerous statistical problems using the pen-and-paper approach, platforms like R and python made it possible to handle big data and extract crucial information from them.</p>
+<p>Mubarak Ganiyu favorite movie is Inglourious basterds.</p>
 
 
 
