--- a/04-home-field-advantage/wirteup.html
+++ b/04-home-field-advantage/wirteup.html
@@ -263,8 +263,7 @@ simulation.game &lt;- rep(NA, 10000)
 for (i in seq_along(simulation.game)){
   prob_game &lt;- rep(NA,7)
   for(j in 1:7){
-    p_win &lt;- 0.55
-    prob_game[j] &lt;- rbinom(1,1,p_win)
+    prob_game[j] &lt;- rbinom(1,1,0.55)
   }
   simulation.game[i] &lt;- ifelse(sum(prob_game)&gt;3, 1, 0)
 }
@@ -277,8 +276,7 @@ simulation.game.adv&lt;- rep(NA, 10000)
 for (i in seq(simulation.game.adv)){
   prob_game &lt;- rep(NA,7)
   for(j in 1:7){
-    p_win &lt;- ifelse(hfi[j], pbh, pba)
-    prob_game[j] &lt;- rbinom(1,1,p_win)
+    prob_game[j] &lt;- rbinom(1,1,ifelse(hfi[j], pbh, pba))
   }
   simulation.game.adv[i] &lt;- ifelse(sum(prob_game)&gt;3, 1, 0)
 }
@@ -338,7 +336,7 @@ difference </code></pre>
   pba &lt;- 1 - (1 - pb[x]) * advantage_multiplier
 
   # Calculate the probability of winning without home advantage
-  p.win [x] &lt;- 1 - pbinom(3, 7, pb[x])
+  p.win [x] &lt;- pnbinom(3, 4, pb[x])
 
   # Calculate the probability of winning with home advantage
   apo[, x := NA_real_] # Initialize new column in apo to store prob
@@ -427,7 +425,7 @@ for (x in seq(field.advantage)) {
   pbh &lt;- 0.55 * advantage_multiplier
   pba &lt;- 1 - (1 - 0.55) * advantage_multiplier
 
-  p.win [x] &lt;- 1 - pbinom(3, 7, 0.55)
+  p.win [x] &lt;- pnbinom(3, 4, 0.55)
 
   # Calculate the probability of each possible outcome
   apo[, x := NA_real_] # Initialize new column in apo to store prob
